2016-09-26  Antti Koivisto  <antti@apple.com>

        Input elements don't work inside shadow tree
        https://bugs.webkit.org/show_bug.cgi?id=160427

        Reviewed by Darin Adler.

        * fast/shadow-dom/composed-tree-shadow-child-subtree-expected.txt: Added.
        * fast/shadow-dom/composed-tree-shadow-child-subtree.html: Added.
        * fast/shadow-dom/input-element-in-shadow-expected.html: Added.
        * fast/shadow-dom/input-element-in-shadow.html: Added.

2016-09-23  Zalan Bujtas  <zalan@apple.com>

        ASSERTION FAILED: !newRelayoutRoot.container() || is<RenderView>(newRelayoutRoot.container()) || !newRelayoutRoot.container()->needsLayout() while loading sohu.com
        https://bugs.webkit.org/show_bug.cgi?id=162466

        Reviewed by Simon Fraser.

        * fast/block/positioning/subtree-assert-when-positioned-element-dirties-containing-block-expected.txt: Added.
        * fast/block/positioning/subtree-assert-when-positioned-element-dirties-containing-block.html: Added.

2016-09-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(r194387): Crash on github.com in IntlDateTimeFormat::resolvedOptions in C locale
        https://bugs.webkit.org/show_bug.cgi?id=162139

        Reviewed by Michael Catanzaro.

        * js/intl-invalid-locale-crash-expected.txt: Added.
        * js/intl-invalid-locale-crash.html: Added.

2016-09-22  Brady Eidson  <beidson@apple.com>

        IDBIndex.openCursor() matches indices on multiple object stores.
        <rdar://problem/28434463> and https://bugs.webkit.org/show_bug.cgi?id=158833

        Reviewed by Alex Christensen.

        * storage/indexeddb/modern/multiple-objectstore-index-cursor-collision-expected.txt: Added.
        * storage/indexeddb/modern/multiple-objectstore-index-cursor-collision-private-expected.txt: Added.
        * storage/indexeddb/modern/multiple-objectstore-index-cursor-collision-private.html: Added.